--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html">Medicio</a>
+      <a class="brand" href="index.html">Chouaib Clinic</a>
       <nav class="nav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
